# FastBev_infer_DNN

./: CMakeLists.txt  README.md  build.sh  main_single.cpp  main_video.cpp  run_image.sh  run_video.sh
backproject/: backproject.cpp  backproject.h
data/: README.md
infer/: fastbev_infer.cpp  fastbev_infer.h
loader/: nuscenes_loader.cpp  nuscenes_loader.h
optimize/: bev_pool.cpp  bev_pool.h  bev_pool_cuda.cu
postprocess/: postprocess.cpp  postprocess.h
visualize/: visualize.cpp  visualize.h
